Bug fixed: 1. menu open on small size, 2. Add google maps, 3. Require async, to include google maps

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -363,7 +363,7 @@ p {
         -o-background-size: cover;
         background-size: cover;
         background-attachment: fixed;
-        padding: 50px 0;
+        padding: 100px 0;
 
         h2 {
             color: #fff;
@@ -385,7 +385,11 @@ p {
 // ----------- Portfolio ----------
 // --------------------------------
 
-
+#map {
+    width: 100%;
+    height: 500px;
+    background: transparent;
+}
 
 
 // --------------------------------
@@ -549,9 +553,6 @@ p {
         padding-top: 50px;
     }
 
-    .swag {
-        background-attachment: scroll;
-    }
 }
 
 @media screen and (max-width: 768px) {
@@ -571,6 +572,7 @@ p {
 
     .navbar-brand {
         margin-right: 0;
+        font-size: 2em;
     }
 
     #content h1 {
@@ -583,6 +585,11 @@ p {
 
     .inner {
         padding-top: 100px;
+    }
+
+    .swag,
+    .pluses {
+        background-attachment: scroll;
     }
 
 }
